--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-noip is a utility to update a no-ip.com DNS records.
+noip is a utility to update no-ip.com DNS records.
 
 See https://www.noip.com/integrate/request
